<resources>
    <string name="app_name">Spinner</string>

    <string name="enter_e_mail_address">example@gmail.com</string>
    <string name="email">Email:</string>
    <string name="enter_password_here">Password</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="spinner_logo">Spinner Logo</string>
    <string name="new_game">New Game</string>
    <string name="profile">Profile</string>
    <string name="username">Username:</string>
    <string name="enter_username">Username</string>

    <string name="north">NORTH!</string>
    <string name="south">SOUTH!</string>
    <string name="east">EAST!</string>
    <string name="west">WEST!</string>
    <string name="press">PRESS!</string>
    <string name="shake">SHAKE!</string>
    <string name="ready">Ready?</string>
    <string name="start">Start</string>
    <string name="game_over">Game Over!</string>

    <string-array name="Time">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="ties">Ties:</string>
    <string name="sign_in">Sign In</string>
    <string name="main_menu">Main Menu</string>
    <string name="login">Login</string>
    <string name="browse_games">Browse Games</string>
    <string name="highscore">Highscore:</string>
    <string name="game_title">Game Title:</string>
    <string name="time_">Duration:</string>
    <string name="start_game">Start Game</string>
    <string name="title_example">\"My New Game\"</string>
    <string name="scores">High Scores</string>
    <string name="in_lobby_please_wait">In lobby, please wait...</string>
    <string name="type_name_of_chatroom">Type name of Chatroom...</string>
    <string name="add_chatroom">Add Chatroom</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="send_message">Send Message</string>
    <string name="enter_message_50_characters_max">Enter Message, 25 characters max!</string>
    <string name="delete_chatroom">delete chatroom</string>
    <string name="friends_search">Search by Username</string>
    <string name="friends_list">Friends List</string>
    <string name="add_friends">Add New Friends</string>
    <string name="compass">compass</string>

</resources>
