<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Options Menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_white_50dp">
        <menu>
            <item android:id="@+id/options_main_menu"
                android:icon="@drawable/ic_description_black_24dp"
                android:title="@string/main_menu"/>
            <item android:id="@+id/options_profile"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/profile"/>
            <item android:id="@+id/options_chatrooms"
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/chatrooms"/>
            <item android:id="@+id/options_friends_list"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/friends_list"/>
            <item android:id="@+id/options_add_friends"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/add_friends"/>
        </menu>
    </item>
</menu>